# phosphor-ted-dbus-interface

./: README.md  meson.build  phosphor-ted-dbus-interface.service.in  update_meson.md
src/: main.cpp  sensor.cpp  sensor.hpp  sensors.hpp
